--- a/frontend/src/pages/MonteSeuPC.css
+++ b/frontend/src/pages/MonteSeuPC.css
@@ -1,3 +1,8 @@
+.main_MonteSeuPC{
+    display: flex;
+    padding: 10px;
+}
+
 .menu {
     width: 200px;
     background-color: #2c3e50;
@@ -8,6 +13,6 @@
 
 .screens {
     flex: 1;
-    padding: 20px;
+    /*padding: 20px;*/
     transition: background-color 0.5s, color 0.5s;
 }
