--- a/frontend/src/pages/MonteSeuPC.css
+++ b/frontend/src/pages/MonteSeuPC.css
@@ -1,3 +1,7 @@
+.main{
+    height: 600px;
+}
+
 .main_MonteSeuPC{
     display: flex;
     padding: 10px;
@@ -8,11 +12,13 @@
     background-color: #2c3e50;
     color: white;
     padding: 20px;
+    height: 600px;
     box-shadow: 2px 0 5px rgba(0, 0, 0, 0.2);
 }
 
 .screens {
     flex: 1;
-    /*padding: 20px;*/
+    padding: 20px, 0px, 0px, 0px;
     transition: background-color 0.5s, color 0.5s;
 }
+
