--- a/frontend/src/pages/MonteSeuPC.css
+++ b/frontend/src/pages/MonteSeuPC.css
@@ -8,17 +8,19 @@
 }
 
 .menu {
-    width: 200px;
-    background-color: #2c3e50;
+    font-size: 17px;
+    width: 250px;
+    background-color: #888;
     color: white;
     padding: 20px;
     height: 600px;
-    box-shadow: 2px 0 5px rgba(0, 0, 0, 0.2);
 }
 
 .screens {
+    background-color: #424242;
+    height: 600px;
     flex: 1;
-    padding: 20px, 0px, 0px, 0px;
+    padding: 20px;
     transition: background-color 0.5s, color 0.5s;
 }
 
